force-app/main/default/objects/Property__c/fields/Picture_IMG__c.field-meta.xml
<CustomField>
    <fullName>Picture_IMG__c</fullName>
    <formula>if(ISBLANK( Thumbnail__c ), &apos;&apos;, IMAGE(Thumbnail__c , &quot;Picture&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Picture</label>
    <type>Text</type>
</CustomField>