force-app/main/default/objects/Property__c/fields/Property_image__c.field-meta.xml
<CustomField>
    <fullName>Property_image__c</fullName>
    <formula>IMAGE(  Image_URL__c , &quot;Flower&quot;, 200, 300)</formula>
    <label>Property image</label>
    <type>Text</type>
</CustomField>